' Generated by UML Generator
' Encoded: hLTBRzms4Bxlho3WYrpl1dLwMoI6ZMtZ1h0TmtOEGT33I1fBT2LI9IaRcpJ_lKDIpnMrTjtULZFV36U-UP1xgWqeKvV5Gl_9HGKAIfOKeFMPCOh7jS6FYHIt_1kodnSvJv4bN2K5BXOEnNu50zUWD2hsVS7OqNVoPtZoWrLMU6lg58NHqJqlK429QtPBRaLsk6ONN9jtdmL_HAMvsJRGayMFrlK7nL6aD_XNZThSvGeXTMUiD8bHhTd4s2eL9cZ5C-ekFeqbLBbKDgJs9tlF13xrtz7neRLPsSG2qKIpWIpPdZ2ipoDLYuX8U9GyxJDk0EUAZlUfGle02OfaQzbQiqketWKESrJ-bcPuSkBuyN82UmjF-P85o6wp6vuSDVPwjaOk0qXJUsIaZuC4wBT1yHFoBATCEF7Gf4--CZHNLX5BfTlZGyoj1wasTcT5SILJrD6UblB8vZFQwSDGcnobN5S5R3qVaphPytsxYoRg6JU3R3kg7MbxxCOSzOUUGu6tELG5RdT6ZRGy4pTIbYKOr2-eNyTyFm-Lmdj2VIBedWeiMG8YvIcT4zRMIitMBfQoG11zIZVsI0N5DPZy0xUpvBi-ixIlH-FGqJUrYG9mrw7tt0vi3u_ShWl6JGhga8qiAn3RVxEaBe6BdNAK98h8dsxzVFrZqEeTB4E1YdYyetso0Ot7ptJmhE7Rrnh-yc931IbUGFnyPn6JZVEhkepj-lE3RWUWusoJm_-spqlK6h9kdl_JYk_ZUkLcNxATS4Ah7c9j52I6ZNQ-O-9Wk9hijtFbbyT1reJKQxS8gbENy217sgo2DKjb7TDbJP-gMG_NRixfIi6sYjx4Llo0bi0ZbxN-A0mgeNDUJK6UgmIAf2x8tqOAWOdXz4Wmv3QZCPCczu6sWp-g_eGrtmHjV3DrldVNRo2QX8hsEycasiw4El4tkW6Mh2LvoSOKBrb7C1LsI2yXUtAf8vwZTcbzX0azV1MPpPL9QTZEwchkxiFCoNhKkKjgWlj2kOs1bpR52Uwy0Ylh6idARgO9TwkaPzyYhwSDDODiVKPpLx8UOFOqo_XLuLzjmJFf_UAraU-jg_6pOE1aqxVOZ2EBkFIZ7-skWDwLaLuqvfXUb53eICOFQ_OfVg3o3wvAqkUWymszSA9-a48luvzMgm1lenUb34BSOsQrEWceXa-EDsz2YC0DRWCPtTm1JDZPu5xOcuqpRsNJTR9Q_RrF7NPzIeJIlw1_00
' URL: http://www.plantuml.com/plantuml/uml/hLTBRzms4Bxlho3WYrpl1dLwMoI6ZMtZ1h0TmtOEGT33I1fBT2LI9IaRcpJ_lKDIpnMrTjtULZFV36U-UP1xgWqeKvV5Gl_9HGKAIfOKeFMPCOh7jS6FYHIt_1kodnSvJv4bN2K5BXOEnNu50zUWD2hsVS7OqNVoPtZoWrLMU6lg58NHqJqlK429QtPBRaLsk6ONN9jtdmL_HAMvsJRGayMFrlK7nL6aD_XNZThSvGeXTMUiD8bHhTd4s2eL9cZ5C-ekFeqbLBbKDgJs9tlF13xrtz7neRLPsSG2qKIpWIpPdZ2ipoDLYuX8U9GyxJDk0EUAZlUfGle02OfaQzbQiqketWKESrJ-bcPuSkBuyN82UmjF-P85o6wp6vuSDVPwjaOk0qXJUsIaZuC4wBT1yHFoBATCEF7Gf4--CZHNLX5BfTlZGyoj1wasTcT5SILJrD6UblB8vZFQwSDGcnobN5S5R3qVaphPytsxYoRg6JU3R3kg7MbxxCOSzOUUGu6tELG5RdT6ZRGy4pTIbYKOr2-eNyTyFm-Lmdj2VIBedWeiMG8YvIcT4zRMIitMBfQoG11zIZVsI0N5DPZy0xUpvBi-ixIlH-FGqJUrYG9mrw7tt0vi3u_ShWl6JGhga8qiAn3RVxEaBe6BdNAK98h8dsxzVFrZqEeTB4E1YdYyetso0Ot7ptJmhE7Rrnh-yc931IbUGFnyPn6JZVEhkepj-lE3RWUWusoJm_-spqlK6h9kdl_JYk_ZUkLcNxATS4Ah7c9j52I6ZNQ-O-9Wk9hijtFbbyT1reJKQxS8gbENy217sgo2DKjb7TDbJP-gMG_NRixfIi6sYjx4Llo0bi0ZbxN-A0mgeNDUJK6UgmIAf2x8tqOAWOdXz4Wmv3QZCPCczu6sWp-g_eGrtmHjV3DrldVNRo2QX8hsEycasiw4El4tkW6Mh2LvoSOKBrb7C1LsI2yXUtAf8vwZTcbzX0azV1MPpPL9QTZEwchkxiFCoNhKkKjgWlj2kOs1bpR52Uwy0Ylh6idARgO9TwkaPzyYhwSDDODiVKPpLx8UOFOqo_XLuLzjmJFf_UAraU-jg_6pOE1aqxVOZ2EBkFIZ7-skWDwLaLuqvfXUb53eICOFQ_OfVg3o3wvAqkUWymszSA9-a48luvzMgm1lenUb34BSOsQrEWceXa-EDsz2YC0DRWCPtTm1JDZPu5xOcuqpRsNJTR9Q_RrF7NPzIeJIlw1_00
' Generated on: 2025-12-01T21:14:18.759557

@startuml
skinparam classAttributeIconSize 0
hide circle

class DataParser {
  +{static} parseStudents(filename: String): List<UniversityStudent>
}

class FriendRequestThread {
  -sender: UniversityStudent
  -receiver: UniversityStudent
  -{static} semaphore: Semaphore = new Semaphore(1)
  --
  +FriendRequestThread(sender: UniversityStudent, receiver: UniversityStudent)
  +run(): void
}

class StudentGraph {
  -adjacencyList: Map<UniversityStudent, List<Edge>>
  -studentMap: Map<String, UniversityStudent>
  --
  +StudentGraph(students: List<UniversityStudent>)
  +addEdge(s1: UniversityStudent, s2: UniversityStudent, weight: int): void
  +getNeighbors(student: UniversityStudent): List<Edge>
  +getAllNodes(): List<UniversityStudent>
  +getStudent(name: String): UniversityStudent
  +displayGraph(): void
}

class Edge {
  +neighbor: UniversityStudent
  +weight: int
  --
  +Edge(neighbor: UniversityStudent, weight: int)
}

class GaleShapley {
  +{static} assignRoommates(students: List<UniversityStudent>): void
  -{static} prefersOver(student: UniversityStudent, candidate: UniversityStudent, current: UniversityStudent): boolean
}

class ReferralPathFinder {
  -graph: StudentGraph
  --
  +ReferralPathFinder(graph: StudentGraph)
  +findReferralPath(start: UniversityStudent, targetCompany: String): List<UniversityStudent>
}

class Main {
  +{static} main(args: String[]): void
  +{static} generateTestCase1(): List<UniversityStudent>
  +{static} generateTestCase2(): List<UniversityStudent>
  +{static} generateTestCase3(): List<UniversityStudent>
  +{static} gradeLab(students: List<UniversityStudent>, testCaseNumber: int): int
}

class ChatThread {
  -sender: UniversityStudent
  -receiver: UniversityStudent
  -message: String
  -{static} semaphore: Semaphore = new Semaphore(1)
  --
  +ChatThread(sender: UniversityStudent, receiver: UniversityStudent, message: String)
  +run(): void
}

abstract class Student {
  #name: String
  #age: int
  #gender: String
  #year: int
  #major: String
  #gpa: double
  #roommatePreferences: List<String>
  #previousInternships: List<String>
  --
  +calculateConnectionStrength(other: Student): int
}

class UniversityStudent {
  -roommate: UniversityStudent
  -friends: List<String>
  -chatHistory: List<String>
  --
  +UniversityStudent(name: String, age: int, gender: String, year: int, major: String, gpa: double, roommatePreferences: List<String>, internships: List<String>)
  +calculateConnectionStrength(other: Student): int
  +getName(): String
  +getAge(): int
  +getGender(): String
  +getYear(): int
  +getMajor(): String
  +getGpa(): double
  +getRoommatePreferences(): List<String>
  +getPreviousInternships(): List<String>
  +getRoommate(): UniversityStudent
  +setRoommate(roommate: UniversityStudent): void
  +getFriends(): List<String>
  +addFriend(friendName: String): void
  +getChatHistory(): List<String>
  +addChatMessage(message: String): void
  +toString(): String
  +equals(obj: Object): boolean
  +hashCode(): int
}

FriendRequestThread *-- UniversityStudent
StudentGraph o-- UniversityStudent
Edge --> UniversityStudent
GaleShapley ..> UniversityStudent
ReferralPathFinder *-- StudentGraph
ReferralPathFinder ..> UniversityStudent
ChatThread *-- UniversityStudent
Student ..> Student
UniversityStudent --|> Student
UniversityStudent *-- UniversityStudent
@enduml